// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render transition popup correctly 1`] = `
<DropdownOverlay>
  <SelectList
    currentItem="confirm"
    items={
      Array [
        "confirm",
        "resolve",
        "falsepositive",
        "wontfix",
      ]
    }
    onSelect={[MockFunction]}
  >
    <SelectListItem
      item="confirm"
      key="confirm"
      title={
        <FormattedMessage
          defaultMessage="issue.transition.confirm.description"
          id="issue.transition.confirm.description"
          values={
            Object {
              "community_plug_link": <a
                href="https://community.sonarsource.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                issue.transition.community_plug_link
              </a>,
            }
          }
        />
      }
    >
      issue.transition.confirm
    </SelectListItem>
    <SelectListItem
      item="resolve"
      key="resolve"
      title={
        <FormattedMessage
          defaultMessage="issue.transition.resolve.description"
          id="issue.transition.resolve.description"
          values={
            Object {
              "community_plug_link": <a
                href="https://community.sonarsource.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                issue.transition.community_plug_link
              </a>,
            }
          }
        />
      }
    >
      issue.transition.resolve
    </SelectListItem>
    <SelectListItem
      item="falsepositive"
      key="falsepositive"
      title={
        <FormattedMessage
          defaultMessage="issue.transition.falsepositive.description"
          id="issue.transition.falsepositive.description"
          values={
            Object {
              "community_plug_link": <a
                href="https://community.sonarsource.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                issue.transition.community_plug_link
              </a>,
            }
          }
        />
      }
    >
      issue.transition.falsepositive
    </SelectListItem>
    <SelectListItem
      item="wontfix"
      key="wontfix"
      title={
        <FormattedMessage
          defaultMessage="issue.transition.wontfix.description"
          id="issue.transition.wontfix.description"
          values={
            Object {
              "community_plug_link": <a
                href="https://community.sonarsource.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                issue.transition.community_plug_link
              </a>,
            }
          }
        />
      }
    >
      issue.transition.wontfix
    </SelectListItem>
  </SelectList>
</DropdownOverlay>
`;

exports[`should render transition popup correctly for vulnerability 1`] = `
<DropdownOverlay>
  <SelectList
    currentItem="resolveasreviewed"
    items={
      Array [
        "resolveasreviewed",
        "confirm",
      ]
    }
    onSelect={[MockFunction]}
  >
    <SelectListItem
      item="resolveasreviewed"
      key="resolveasreviewed"
      title="vulnerability.transition.resolveasreviewed.description"
    >
      vulnerability.transition.resolveasreviewed
    </SelectListItem>
    <SelectListItem
      item="confirm"
      key="confirm"
      title={
        <FormattedMessage
          defaultMessage="issue.transition.confirm.description"
          id="issue.transition.confirm.description"
          values={
            Object {
              "community_plug_link": <a
                href="https://community.sonarsource.com/"
                rel="noopener noreferrer"
                target="_blank"
              >
                issue.transition.community_plug_link
              </a>,
            }
          }
        />
      }
    >
      issue.transition.confirm
    </SelectListItem>
  </SelectList>
</DropdownOverlay>
`;
